--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/lodash": "^4.17.16",
         "@types/node": "^22.13.5",
+        "@types/vue-router": "^2.0.0",
         "@vue/eslint-config-typescript": "^14.3.0",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
@@ -26,6 +28,8 @@
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^2.0.0-beta.3",
         "@primeuix/themes": "^1.0.0",
+        "@tanstack/vue-query": "^5.68.0",
+        "@vee-validate/zod": "^4.15.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
         "autoprefixer": "^10.4.20",
@@ -42,9 +46,13 @@
         "tailwindcss": "^3.4.1",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.2.2",
+        "vee-validate": "^4.15.0",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
-        "ziggy-js": "^2.4.2"
+        "vue-multiselect": "^3.2.0",
+        "vue-router": "^4.5.0",
+        "ziggy-js": "^2.4.2",
+        "zod": "^3.24.2"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
