--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@tanstack/vue-query": "^5.68.0",
         "@vee-validate/zod": "^4.15.0",
         "@vitejs/plugin-vue": "^5.2.1",
+        "@vuepic/vue-datepicker": "^11.0.2",
         "@vueuse/core": "^12.8.2",
         "autoprefixer": "^10.4.20",
         "class-variance-authority": "^0.7.1",
@@ -49,6 +50,7 @@
         "vee-validate": "^4.15.0",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-easy-lightbox": "^1.19.0",
         "vue-multiselect": "^3.2.0",
         "vue-router": "^4.5.0",
         "ziggy-js": "^2.4.2",
