--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "masbug/flysystem-google-drive-ext": "^2.4",
+        "spatie/laravel-backup": "*",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
