--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "masbug/flysystem-google-drive-ext": "^2.4",
-        "nativephp/electron": "*",
+        "nativephp/electron": "^1.0",
         "spatie/laravel-backup": "*",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.23",
+        "fakerphp/faker": "^1.24",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.41",
@@ -85,6 +85,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "beta",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
